added required dependencies and updated application properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# server properties
+server.port=9191
+server.servlet.context-path=/api
+server.servlet.application-display-name=squad-alert-system
+
+# email properties
+# email.host =
+# email.username =
+# email.password =
 
