--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,10 @@
 	<artifactId>squad-alert-system</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>squad-alert-system</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Squad Alert System</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
+		<mail.version>1.6.2</mail.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -27,6 +28,32 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.12</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>${mail.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>${mail.version}</version>
+		</dependency>
+
+		<!-- Test dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
