Commit project structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ server.servlet.application-display-name=squad-alert-system
 # email.username =
 # email.password =
 
+spring.datasource.url= jdbc:postgresql://172.20.96.37:6432/squad_alert_system
+spring.datasource.username=inventory
+spring.datasource.password=inventory
+spring.datasource.platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.show-sql=false
+spring.jpa.database=postgresql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
