Updating repositories with uuid generator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.username=inventory
 spring.datasource.password=inventory
 spring.datasource.platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
