added changes for fetching emails from paging email server and crud operation support for system param

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,12 @@ server.servlet.context-path=/api
 server.servlet.application-display-name=squad-alert-system
 
 # email properties
-# email.host =
-# email.username =
-# email.password =
+email.host =imap.gmail.com
+email.username =squadalertsystem@gmail.com
+email.password =Test@1234
 
-spring.datasource.url= jdbc:postgresql://172.20.96.37:6432/squad_alert_system
+# Postgresql properties
+spring.datasource.url=jdbc:postgresql://172.20.96.37:6432/squad_alert_system
 spring.datasource.username=inventory
 spring.datasource.password=inventory
 spring.datasource.platform=org.hibernate.dialect.PostgreSQLDialect
