--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,19 @@ email.username =squadalertsystem@gmail.com
 email.password =Test@1234
 
 # Postgresql properties
-spring.datasource.url=jdbc:postgresql://172.20.96.37:6432/squad_alert_system
-spring.datasource.username=inventory
-spring.datasource.password=inventory
+spring.datasource.url=jdbc:postgresql://localhost:5432/squad_alert_system
+spring.datasource.username=amandhaka
+spring.datasource.password=
 spring.datasource.platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=squadalertsystem@gmail.com
+spring.mail.password=Test@1234
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
