reverted application properties changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ email.username =squadalertsystem@gmail.com
 email.password =Test@1234
 
 # Postgresql properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/squad_alert_system
-spring.datasource.username=amandhaka
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://172.20.96.37:6432/squad_alert_system
+spring.datasource.username=inventory
+spring.datasource.password=inventory
 spring.datasource.platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
